--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,7 @@ deploy-staging-identityprovider:
     url: https://csse-s302g4.canterbury.ac.nz/test/identity
   only:
     - dev
+    - U12357b-emoji-validation
 
 deploy-staging-portfolio:
   stage: deploy
@@ -99,6 +100,7 @@ deploy-staging-portfolio:
     url: https://csse-s302g4.canterbury.ac.nz/test/portfolio
   only:
     - dev
+    - U12357b-emoji-validation
 
 deploy-production-identityprovider:
   stage: deploy
