--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ deploy-staging-portfolio:
     name: staging
     url: https://csse-s302g4.canterbury.ac.nz/test/portfolio
   only:
-    - dev
+    - Fix_Story-fix-drag-and-drop-for-groups-mobile
 
 deploy-production-identityprovider:
   stage: deploy
