--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,6 +54,7 @@ branch-build:
     - tags
     - master
     - dev
+    - Fix_Story-speed-up-groups
 
 deploy-staging-identityprovider:
   stage: deploy
@@ -100,6 +101,7 @@ deploy-staging-portfolio:
     url: https://csse-s302g4.canterbury.ac.nz/test/portfolio
   only:
     - dev
+    - Fix_Story-speed-up-groups
 
 deploy-production-identityprovider:
   stage: deploy
