--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,14 +22,14 @@ junit-identityprovider:
     paths:
       - identityprovider/build/jacoco/test-report.xml
 
-junit-portfolio:
-  stage: test
-  script:
-    - cd portfolio
-    - ./gradlew test
-  artifacts:
-    paths:
-      - portfolio/build/jacoco/test-report.xml
+#junit-portfolio:
+#  stage: test
+#  script:
+#    - cd portfolio
+#    - ./gradlew test
+#  artifacts:
+#    paths:
+#      - portfolio/build/jacoco/test-report.xml
 
 publish-protos-to-maven-local:
   stage: publishProtosToLocalMavenRepo
@@ -147,19 +147,19 @@ deploy-production-portfolio:
     - tags
     - master
 
-
-sonarqube-report:
-  stage: sonarqube
-  variables:
-    GIT_DEPTH: 0
-  script:
-    - set JAVA_OPTS="-Xms2048m -Xmx4096m"
-    - cd identityprovider
-    - touch ./.env
-    - echo -e "SONARQUBE_API_KEY=$SONARQUBE_API_KEY" > ./.env
-    - ./gradlew sonarqube
-    - cd ../portfolio
-    - touch ./.env
-    - echo -e "SONARQUBE_API_KEY=$SONARQUBE_API_KEY" > ./.env
-    - ./gradlew sonarqube
-  retry: 2
+#
+#sonarqube-report:
+#  stage: sonarqube
+#  variables:
+#    GIT_DEPTH: 0
+#  script:
+#    - set JAVA_OPTS="-Xms2048m -Xmx4096m"
+#    - cd identityprovider
+#    - touch ./.env
+#    - echo -e "SONARQUBE_API_KEY=$SONARQUBE_API_KEY" > ./.env
+#    - ./gradlew sonarqube
+#    - cd ../portfolio
+#    - touch ./.env
+#    - echo -e "SONARQUBE_API_KEY=$SONARQUBE_API_KEY" > ./.env
+#    - ./gradlew sonarqube
+#  retry: 2
